--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -121,6 +121,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Dialogs\DruckerDialog.cs" />
+    <Compile Include="Dialogs\EinfuehrungsDialog.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
