app id ergaenzt

--- a/Test/Web.config
+++ b/Test/Web.config
@@ -6,9 +6,9 @@
 <configuration>
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
-    <add key="BotId" value="YourBotId" />
-    <add key="MicrosoftAppId" value="" />
-    <add key="MicrosoftAppPassword" value="" />
+    <add key="BotId" value="vorBOTe" />
+    <add key="MicrosoftAppId" value="c36f7e72-79ff-4dc1-a8b9-c949136e7736" />
+    <add key="MicrosoftAppPassword" value="b40niDmecNtjfqpCDiekkui" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
