--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Dialogs\DruckerDialog.cs" />
     <Compile Include="Dialogs\EinfuehrungsDialog.cs" />
+    <Compile Include="Dialogs\WillkommensDialog.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
