--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -120,6 +120,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
+    <Compile Include="Dialogs\AnwendugForm.cs" />
     <Compile Include="Dialogs\DruckerDialog.cs" />
     <Compile Include="Dialogs\DruckerForm.cs" />
     <Compile Include="Dialogs\EinfuehrungsDialog.cs" />
@@ -127,6 +128,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
